--- a/public/main.html
+++ b/public/main.html
@@ -49,12 +49,9 @@
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
       <br><br> <p>Índice</p>
       <br><br><a href="#matters">Matters of Fact / El Inevitable Sufrimiento de la Arquitectura</a>
-      <br><br><a href="#casaJBRC">Casa J.B.R.C. / Texto Descriptivo </a>
-      <br><a href="#casaJBRC2">              / Planos </a>
-      <br><a href="#casaJBRC3">              / Fotografías de Santiago Giusto </a>
-      <br><a href="#casaJBRC4">              / Series</a>
-      <br><br><a href="#casaERCP">Casa E.R.C.P. / Texto Descriptivo </a><a href="#casaERCP2">/ Planos </a><a href="#casaERCP3">/ Fotos</a>
-      <br><br><a href="#casaFG">Casa F.G. / Texto Descriptivo </a><a href="#casaFG2">/ Planos </a><a href="#casaFG3">/ Fotos</a>
+      <br><br><p style="color:grey">Casa J.B.R.C. </p><a href="#casaJBRC">/ Texto Descriptivo </a><a href="#casaJBRC2">/ Planos </a><a href="#casaJBRC3">/ Fotografías de Santiago Giusto </a><a href="#casaJBRC4">/ Series</a>
+      <br><br><p style="color:grey">Casa E.R.C.P. </p><a href="#casaERCP">/ Texto Descriptivo </a><a href="#casaERCP2">/ Planos </a><a href="#casaERCP3">/ Fotos</a>
+      <br><br><p style="color:grey">Casa F.G. </p><a href="#casaFG">/ Texto Descriptivo </a><a href="#casaFG2">/ Planos </a><a href="#casaFG3">/ Fotos</a>
       <br><br><a href="#creciendo">Creciendo en Público / Newsletter Errático</a>
       <br><br><a href="#edificioSCW">Edificio S.C.W. / Saavedra, Buenos Aires</a>
       <br><br><a href="#casaFKL">Casa F.K.L. / Avenida de Mayo, Buenos Aires</a>
@@ -918,23 +915,23 @@ Publicado en <i>Symmetry: The One and the Many (David Salomon, Archivos de Arqui
       <h3>Hacia una Arquitectura sin Fin</h3>
       <p>Circular #02. Arquitectura, Arquitectura y Arquitectura</p>
        <br>
-      <p> <b>1.</b> ¿Cuáles son las cualidades, las capacidades, las potencias que están dentro de la arquitectura que son socialmente transformadoras? <br>
+      <p> <b> 1.</b> ¿Cuáles son las cualidades, las capacidades, las potencias que están dentro de la arquitectura que son socialmente transformadoras? <br>
 <br>
-       <b> 2. </b>Mientras que la arquitectura encuentre sus fines subyugados a determinaciones externas el despliegue de una política propia estará inhibido. <br>
+       <b> 2.</b>Mientras que la arquitectura encuentre sus fines subyugados a determinaciones externas el despliegue de una política propia estará inhibido. <br>
 <br>
        <b> 3.</b> La arquitectura, en tanto núcleo teórico que puede pensar cómo se “espacializa” el mundo está confinada a ejercitar la mera praxis de la supervivencia. <br>
 <br>
-        <b>>4.</b> La construcción de un edificio es una actualización temporal de una decisión espacial tomada previamente. Es una cristalización de un momento anterior. <br>
+        <b> 4.</b> La construcción de un edificio es una actualización temporal de una decisión espacial tomada previamente. Es una cristalización de un momento anterior. <br>
 <br>
-        <b>5.</b> La arquitectura liberada de su carácter empírico deviene un saber que puede pensar el mundo. 6. En la arquitectura sin fin no existen los encargos. <br>
+        <b> 5.</b> La arquitectura liberada de su carácter empírico deviene un saber que puede pensar el mundo. 6. En la arquitectura sin fin no existen los encargos. <br>
 <br>
        <b> 7.</b> En una misma arquitectura hay una arquitectura con una determinada idea política y una arquitectura con otra idea política superpuesta, en contradicción, en dialogo y en fricción.<br>
 <br>
-       <b> 8. </b>Habitar es un acto primitivo e instintivo que precisa únicamente de la protección del clima. <br>
+       <b> 8.</b>Habitar es un acto primitivo e instintivo que precisa únicamente de la protección del clima. <br>
 <br>
        <b> 9.</b> La arquitectura sin fin tiene un propósito en sí misma. <br>
 <br>
-        <b>10.</b> La arquitectura sin fin incorpora lo construible al reflexionar sobre lo construido. <br>
+        <b> 10.</b> La arquitectura sin fin incorpora lo construible al reflexionar sobre lo construido. <br>
 <br>
        <b> 11.</b> Una arquitectura que se propone apolítica esta entregada a una política que además de ajena, desconoce. <br>
 <br>
@@ -1154,10 +1151,6 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
       <!-- Add more content here if needed -->
     </div>
         
-
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-
-    </div>
     </div>
 
   </div>
