--- a/public/main.html
+++ b/public/main.html
@@ -47,8 +47,8 @@
       <h3>Manuel Mensa</h3>
       <p>contacto@manuelmensa.com</p>
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
-      <br><br> <p>Índice</p>
-      <br><br><a href="#matters">Matters of Fact / El Inevitable Sufrimiento de la Arquitectura</a>
+      <br> <p>Índice</p>
+      <br><a href="#matters">Matters of Fact / El Inevitable Sufrimiento de la Arquitectura</a>
       <br><br><a style="text-decoration:none">Casa J.B.R.C. </a><a href="#casaJBRC">/ Texto Descriptivo </a><a href="#casaJBRC2">/ Planos </a><a href="#casaJBRC3">/ Fotografías de Santiago Giusto </a><a href="#casaJBRC4">/ Series</a>
       <br><br><p style="color:grey">Casa E.R.C.P. </p><a href="#casaERCP">/ Texto Descriptivo </a><a href="#casaERCP2">/ Planos </a><a href="#casaERCP3">/ Fotos</a>
       <br><br><p style="color:grey">Casa F.G. </p><a href="#casaFG">/ Texto Descriptivo </a><a href="#casaFG2">/ Planos </a><a href="#casaFG3">/ Fotos</a>
