--- a/public/main.html
+++ b/public/main.html
@@ -50,8 +50,8 @@
       <br> <p>Índice</p>
       <br><a href="#matters">Matters of Fact / El Inevitable Sufrimiento de la Arquitectura</a>
       <br><br><a style="text-decoration:none">Casa J.B.R.C. </a><a href="#casaJBRC">/ Texto Descriptivo </a><a href="#casaJBRC2">/ Planos </a><a href="#casaJBRC3">/ Fotografías de Santiago Giusto </a><a href="#casaJBRC4">/ Series</a>
-      <br><br><p style="color:grey">Casa E.R.C.P. </p><a href="#casaERCP">/ Texto Descriptivo </a><a href="#casaERCP2">/ Planos </a><a href="#casaERCP3">/ Fotos</a>
-      <br><br><p style="color:grey">Casa F.G. </p><a href="#casaFG">/ Texto Descriptivo </a><a href="#casaFG2">/ Planos </a><a href="#casaFG3">/ Fotos</a>
+      <br><br><a style="text-decoration:none">Casa E.R.C.P. </a><a href="#casaERCP">/ Texto Descriptivo </a><a href="#casaERCP2">/ Planos </a><a href="#casaERCP3">/ Fotos</a>
+      <br><br><a style="text-decoration:none">Casa F.G. </a><a href="#casaFG">/ Texto Descriptivo </a><a href="#casaFG2">/ Planos </a><a href="#casaFG3">/ Fotos</a>
       <br><br><a href="#creciendo">Creciendo en Público / Newsletter Errático</a>
       <br><br><a href="#edificioSCW">Edificio S.C.W. / Saavedra, Buenos Aires</a>
       <br><br><a href="#casaFKL">Casa F.K.L. / Avenida de Mayo, Buenos Aires</a>
