--- a/public/main.html
+++ b/public/main.html
@@ -426,6 +426,14 @@ In Front of a Nightclub<br>
       <h3>Erewhon</h3>
       <p>Galería Digital de Arte</p>
       <br>
+      <p>Un laberinto ordenado creado por pares de escaleras opuestas que parten de un mismo centro,
+proliferan de dos en dos y cambian de dirección creando un recorrido cambiante pero reconocible. A su
+vez, cada línea de escaleras se abre en dos y se pliega en una segunda escalera espejada que vuelve al
+centro de partida. Los escalones de las escaleras superiores tiemblan, se acumulan en los extremos y se
+conectan formando arcos de altura y sección variable. De las escaleras inferiores surgen arcos seguidos
+de columnas dirigidas hacia el plano límite inferior. Los escalones prolongan progresivamente su
+profundidad hasta alcanzar el ancho de la próxima línea de escaleras volviéndose a la vez descanso y
+último escalón.</p>
       <b><p>Stagger</p></b>
       <p>Paired stairs emanating from a center form an orderly labyrinth, creating a flitting yet recognizable path.
 Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
