--- a/public/main.html
+++ b/public/main.html
@@ -259,6 +259,9 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <br>
       <br>
       <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/06.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/08.jpg" alt="Image 1">
       <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
