--- a/public/main.html
+++ b/public/main.html
@@ -442,21 +442,29 @@ profundidad hasta alcanzar el ancho de la próxima línea de escaleras volviénd
 Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial evolution.</p>
       <img class="lazyload" src="assets/img/33_rooms/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/02.png" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/09.jpg" alt="Image 1">
       <b><p>Stagggger</p></b>
       <p>Paired stairs emanating from a center form a challenging labyrinth, creating a shifting yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial abundance.</p>
       <img class="lazyload" src="assets/img/33_rooms/02.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/04.png" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/10.jpg" alt="Image 1">
       <b><p>Stagggggger</p></b>
       <p>Paired stairs emanating from a center form a complex labyrinth, creating a fleeting yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial proliferation.</p>
       <img class="lazyload" src="assets/img/33_rooms/03.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/06.png" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/11.jpg" alt="Image 1">
       <b><p>Stagggggggger</p></b>
       <p>Paired stairs emanating from a center form an inmense labyrinth, creating a variegated yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
 shaping spatial profusion.</p>
       <img class="lazyload" src="assets/img/33_rooms/04.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/08.png" alt="Image 1">
+      <img class="lazyload" src="assets/img/33_rooms/12.jpg" alt="Image 1">
       <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
