--- a/public/main.html
+++ b/public/main.html
@@ -469,6 +469,76 @@ shaping spatial profusion.</p>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
+     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="erewhon"></span>
+      <h3>Render Visible the Invisible</h3>
+      <p>Lógica de la Sensación</p>
+      <br>
+      <b><p>The Round Area, the Ring</p></b>
+      <p>The figure is figuration, the correlation between images and images or objects and images; illustration, and narration. 
+<br>The figure inside O is an isolated Figure. 
+<br>O can be a round area, a bar, a parallelepiped; dispersed, centered, or extended; and function as a place or an enclosed operative field.
+<br>The relationship between Figures is a matter of fact.
+</p>
+      <img class="lazyload" src="assets/img/40_render visible the invisible/00.jpg" alt="Image 1">
+      <br>
+       <b><p>Notes on Figuration in Past Paintings</p></b>
+      <p>Many artists have worked on the Figural as an opposition to the figurative. 
+<br>In the Burial of the Count of Orgaz painted by El Greco the Figures emerge from the figuration after an existing code that divides the celestial from the earthly. This code liberates the Figures towards a range of celestial sensations.
+<br>In Stigmatization of St. Francis, painted by Giotto, the Kite-Jesus gives St. Francis his stigmas indicated by linear cords.
+<br>In Creation of the Animals, painted by Tintoretto, the Figures emerge from the figure separated by a God that acts as a referee firing a gun for the race to start.
+</p>
+      <img class="lazyload" src="assets/img/40_render visible the invisible/01.jpg" alt="Image 1">
+      <br>
+       <b><p>Athleticism</p></b>
+      <p>The Material Structure curls around O in a cylindrical movement that isolates the Figure in an extreme confinement and excludes all spectators. 
+<br>The Figure accompanies the movement. 
+<br>An attendant inside the round area works as a point of reference for the movement of the Figure.
+</p>
+      <img class="lazyload" src="assets/img/40_render visible the invisible/02.jpg" alt="Image 1">
+      <br>
+       <p>The Figure spasms. It elongates or contracts to escape through a vanishing point in the volumetric Round Area, that can be a mirror or a parallepiped or a hole or an umbrella, to dissipate into the Material Structure.
+</p>
+      <img class="lazyload" src="assets/img/40_render visible the invisible/03.jpg" alt="Image 1">
+       <br>
+       <b><p>Body, Meat and Spirit, Becoming Animal</p></b>
+      <p>Both man and animal have animal traits which lead their movement towards meat. 
+<br>Meat is their zone of indiscernibility: man becomes animal and animal spiritualizes.
+<br>Meat is the state of the body in which both, flesh and bone, confront each other locally: the flesh ceases to cover the bones, the bones emerge from the flesh. 
+<br>Flesh is the bodily material of the Figure.
+<br>The head emerges from the face through its dismantelation. It is a block of flesh separated from the bone. 
+<br>The mouth can transcend the head and turn all meat into a head without a face; being the hole through which the body escapes in a scream.   
+</p>
+      <img class="lazyload" src="assets/img/40_render visible the invisible/04.jpg" alt="Image 1">
+      <br>
+       <b><p>Recapitulative note</p></b>
+      <p>The head-meat is the becoming animal of the man and the culmination of the body. The body escapes from itself through the mouth in a scream.
+<br>A diastolic movement goes from the Material Structure to the Figure and a systolic one goes from the body to the Material Structure. The round area is a membrane through which these two movements occur simultaneously.
+<br>This becoming animal is a part of a deeper becoming imperceptible in which the Figure finally dissipates into the Material Structure. Dissipation is achieved with a smile. With a dissipated Figure, the Round Area is an isolator but also a depopulator, a vehicle, an apparatus and a deformer.  
+<br>This exchange constitutes the rhythm of the painting. 
+</p>
+      <img class="lazyload" src="assets/img/40_render visible the invisible/05.jpg" alt="Image 1">
+      <br>
+        <b><p>Painting and Sensation</p></b>
+      <p>A vital power connects all the levels of the same sensation that exist after a remain of movement. Sensation has its own levels or domains. The Figure itself is a shifting sequence in which the Sensation coagulates. Both have a synthetic character. 
+<br>Rhythm places in each sensation the levels through which it passes. It is systolic and diastolic. 
+<br>The Figure is multisensible, has only instincts and no feelings. It spasms because of the invisible forces of the body. 
+<br>Neutralization of primary figuration via rubbing or scrubbing, a crouching position or the presence of a curtain, allows the Figure to produce the violence of the sensation. This violence impacts on the nervous system.
+ 
+</p>
+      <img class="lazyload" src="assets/img/40_render visible the invisible/06.jpg" alt="Image 1">
+      <br>
+       <b><p>Hysteria</p></b>
+      <p>The body without organs has a powerful nonorganic life like the gothic line.  This never ceases to change direction. It is broken, split, diverted, turned in on itself, coiled up or extended. The body without organs, like an egg, has axes and vectors, gradients, zones, cinematic movements and dynamic tendencies. 
+<br>A wave with a variable amplitude traces zones or levels while flowing through the body without organs. When the wave encounters a chaotic external force a sensation and a temporary organ are produced. These can change, thus they allow allotropic variations to be made. 
+<br>A lines and colors system and temporary organs introduce time inside painting through chronochromatism. They are already there and always delayed, thus they are presence. Through presence, chronocromatism impacts directly on the Nervous System.
+<br>This constitutes the hysterical reality of painting.
+</p>
+      <img class="lazyload" src="assets/img/40_render visible the invisible/07.jpg" alt="Image 1">
+      <br>
+      <p>lorem ipsum dolor</p>
+      <!-- Add more content here if needed -->
+    </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="muros"></span>
       <h3>Muros, Puertas y Vanos</h3>
