--- a/public/main.html
+++ b/public/main.html
@@ -536,6 +536,25 @@ shaping spatial profusion.</p>
 </p>
       <img class="lazyload" src="assets/img/40_render visible the invisible/07.jpg" alt="Image 1">
       <br>
+       <b><p>Painting Forces</p></b>
+      <p>Pressure, dilation, contraction, flattening, elongation, desire to sleep, to vomit, to turn over, to remain seated, time, inertia, weight, attraction, gravitation and germination are some invisible forces. Dissipation, isolation, deformation and are Bacon´s invisible forces. 
+<br>Invisible forces strike the Figure in the brushed, wiped, swiped or covered over areas. The Figure wrestles with these forces in an apparent movement. Deformation is expressed through a scream, the wrapping around the contour or the allotropic variations. The Figure´s ultimate function is to capture forces and rendering them visible.
+<br>Invisible and Visible forces are then coupled in the painting.
+</p>
+      <img class="lazyload" src="assets/img/40_render visible the invisible/08.jpg" alt="Image 1">
+      <br>
+       <b><p>Couples and Tryptichs</p></b>
+      <p>Matters of fact are nonillustrative and nonnarrative relations between Figures. 
+<br>Coupling is a type of matter of fact.
+<br>Vibration is sensation. Resonance of two sensations, of a Figure and a Figure, or a body and a body or a Figure and its attendant is coupling.
+<br>Tryptich is another type of matter of fact.
+<br>In a tryptich, ryhtm amplifies and turns into a Figure that exceeds itself. It falls and redistributes into a passive rhythm, an attendant rhythm and an active rhythm. 
+<br>These can be the resonance of the coupling of two figures, two bodies or a Figure and an animal or the capturing of time in a tryptich, which encountres active, passive, and attendant Figures. 
+<br>Matters of fact are nonillustrative and nonfigurative. 
+
+</p>
+      <img class="lazyload" src="assets/img/40_render visible the invisible/09.jpg" alt="Image 1">
+      <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
