--- a/public/main.html
+++ b/public/main.html
@@ -157,10 +157,12 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <p>Series</p>
       <br>
        <br>
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/00.mp4" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/01.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/06_casa_freesbee_series/02.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/03.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/04.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/06_casa_freesbee_series/05.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/05.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/06.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/07.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/08.jpg" alt="Image 1">
@@ -168,7 +170,9 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/10.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/11.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/12.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/13.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/14.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/15.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/16.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/17.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/18.jpg" alt="Image 1">
@@ -184,6 +188,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/28.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/29.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/30.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/06_casa_freesbee_series/31.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/32.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/33.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/34.jpg" alt="Image 1">
