--- a/public/main.html
+++ b/public/main.html
@@ -188,20 +188,6 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/28.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/29.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/06_casa_freesbee_series/30.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/06_casa_freesbee_series/31.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/06_casa_freesbee_series/32.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/06_casa_freesbee_series/33.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/06_casa_freesbee_series/34.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/06_casa_freesbee_series/35.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/06_casa_freesbee_series/36.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/06_casa_freesbee_series/37.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/06_casa_freesbee_series/38.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/06_casa_freesbee_series/39.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/06_casa_freesbee_series/40.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/06_casa_freesbee_series/41.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/06_casa_freesbee_series/42.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/06_casa_freesbee_series/43.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/06_casa_freesbee_series/44.jpg" alt="Image 1">
        <br>
       <p>Fotografías: Manuel Mensa, Renée Charmichael <br>
 Edición y secuenciación: Catalina Sfer Salas</p>
@@ -233,7 +219,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaERCP3"></span>
-      <h3><u>Casa E.R.C.P.</u></h3>
+      <h3>Casa E.R.C.P.</h3>
       <p>Fotos</p>
       <br>
       <br>
@@ -443,122 +429,33 @@ de columnas dirigidas hacia el plano límite inferior. Los escalones prolongan p
 profundidad hasta alcanzar el ancho de la próxima línea de escaleras volviéndose a la vez descanso y
 último escalón.</p>
       <b><p>Stagger</p></b>
-      <p>Paired stairs emanating from a center form an orderly labyrinth, creating a flitting yet recognizable path.
+      <p>Paired stairs emanating from a center form an <u>orderly</u> labyrinth, creating a <u>flitting </u>yet recognizable path.
 Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
-shaping spatial evolution.</p>
+shaping spatial <u>evolution</u>.</p>
       <img class="lazyload" src="assets/img/33_rooms/01.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/33_rooms/02.png" alt="Image 1">
       <img class="lazyload" src="assets/img/33_rooms/09.jpg" alt="Image 1">
       <b><p>Stagggger</p></b>
-      <p>Paired stairs emanating from a center form a challenging labyrinth, creating a shifting yet recognizable
+      <p>Paired stairs emanating from a center form a <u>challenging</u> labyrinth, creating a <u>shifting</u> yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
-shaping spatial abundance.</p>
+shaping spatial <u>abundance</u>.</p>
       <img class="lazyload" src="assets/img/33_rooms/03.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/33_rooms/04.png" alt="Image 1">
       <img class="lazyload" src="assets/img/33_rooms/10.jpg" alt="Image 1">
       <b><p>Stagggggger</p></b>
-      <p>Paired stairs emanating from a center form a complex labyrinth, creating a fleeting yet recognizable
+      <p>Paired stairs emanating from a center form a <u>complex</u> labyrinth, creating a <u>fleeting</u> yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
-shaping spatial proliferation.</p>
+shaping spatial <u>proliferation.</u></p>
       <img class="lazyload" src="assets/img/33_rooms/05.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/33_rooms/06.png" alt="Image 1">
       <img class="lazyload" src="assets/img/33_rooms/11.jpg" alt="Image 1">
       <b><p>Stagggggggger</p></b>
-      <p>Paired stairs emanating from a center form an inmense labyrinth, creating a variegated yet recognizable
+      <p>Paired stairs emanating from a center form an <u>inmense</u> labyrinth, creating a <u>variegated</u> yet recognizable
 path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
-shaping spatial profusion.</p>
+shaping spatial <u>profusion</u>.</p>
       <img class="lazyload" src="assets/img/33_rooms/07.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/33_rooms/08.png" alt="Image 1">
       <img class="lazyload" src="assets/img/33_rooms/12.jpg" alt="Image 1">
-      <br>
-      <p>lorem ipsum dolor</p>
-      <!-- Add more content here if needed -->
-    </div>
-     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <span class="anchor" id="erewhon"></span>
-      <h3>Render Visible the Invisible</h3>
-      <p>Lógica de la Sensación</p>
-      <br>
-      <b><p>The Round Area, the Ring</p></b>
-      <p>The figure is figuration, the correlation between images and images or objects and images; illustration, and narration. 
-<br>The figure inside O is an isolated Figure. 
-<br>O can be a round area, a bar, a parallelepiped; dispersed, centered, or extended; and function as a place or an enclosed operative field.
-<br>The relationship between Figures is a matter of fact.
-</p>
-      <img class="lazyload" src="assets/img/40_render visible the invisible/00.jpg" alt="Image 1">
-      <br>
-       <b><p>Notes on Figuration in Past Paintings</p></b>
-      <p>Many artists have worked on the Figural as an opposition to the figurative. 
-<br>In the Burial of the Count of Orgaz painted by El Greco the Figures emerge from the figuration after an existing code that divides the celestial from the earthly. This code liberates the Figures towards a range of celestial sensations.
-<br>In Stigmatization of St. Francis, painted by Giotto, the Kite-Jesus gives St. Francis his stigmas indicated by linear cords.
-<br>In Creation of the Animals, painted by Tintoretto, the Figures emerge from the figure separated by a God that acts as a referee firing a gun for the race to start.
-</p>
-      <img class="lazyload" src="assets/img/40_render visible the invisible/01.jpg" alt="Image 1">
-      <br>
-       <b><p>Athleticism</p></b>
-      <p>The Material Structure curls around O in a cylindrical movement that isolates the Figure in an extreme confinement and excludes all spectators. 
-<br>The Figure accompanies the movement. 
-<br>An attendant inside the round area works as a point of reference for the movement of the Figure.
-</p>
-      <img class="lazyload" src="assets/img/40_render visible the invisible/02.jpg" alt="Image 1">
-      <br>
-       <p>The Figure spasms. It elongates or contracts to escape through a vanishing point in the volumetric Round Area, that can be a mirror or a parallepiped or a hole or an umbrella, to dissipate into the Material Structure.
-</p>
-      <img class="lazyload" src="assets/img/40_render visible the invisible/03.jpg" alt="Image 1">
-       <br>
-       <b><p>Body, Meat and Spirit, Becoming Animal</p></b>
-      <p>Both man and animal have animal traits which lead their movement towards meat. 
-<br>Meat is their zone of indiscernibility: man becomes animal and animal spiritualizes.
-<br>Meat is the state of the body in which both, flesh and bone, confront each other locally: the flesh ceases to cover the bones, the bones emerge from the flesh. 
-<br>Flesh is the bodily material of the Figure.
-<br>The head emerges from the face through its dismantelation. It is a block of flesh separated from the bone. 
-<br>The mouth can transcend the head and turn all meat into a head without a face; being the hole through which the body escapes in a scream.   
-</p>
-      <img class="lazyload" src="assets/img/40_render visible the invisible/04.jpg" alt="Image 1">
-      <br>
-       <b><p>Recapitulative note</p></b>
-      <p>The head-meat is the becoming animal of the man and the culmination of the body. The body escapes from itself through the mouth in a scream.
-<br>A diastolic movement goes from the Material Structure to the Figure and a systolic one goes from the body to the Material Structure. The round area is a membrane through which these two movements occur simultaneously.
-<br>This becoming animal is a part of a deeper becoming imperceptible in which the Figure finally dissipates into the Material Structure. Dissipation is achieved with a smile. With a dissipated Figure, the Round Area is an isolator but also a depopulator, a vehicle, an apparatus and a deformer.  
-<br>This exchange constitutes the rhythm of the painting. 
-</p>
-      <img class="lazyload" src="assets/img/40_render visible the invisible/05.jpg" alt="Image 1">
-      <br>
-        <b><p>Painting and Sensation</p></b>
-      <p>A vital power connects all the levels of the same sensation that exist after a remain of movement. Sensation has its own levels or domains. The Figure itself is a shifting sequence in which the Sensation coagulates. Both have a synthetic character. 
-<br>Rhythm places in each sensation the levels through which it passes. It is systolic and diastolic. 
-<br>The Figure is multisensible, has only instincts and no feelings. It spasms because of the invisible forces of the body. 
-<br>Neutralization of primary figuration via rubbing or scrubbing, a crouching position or the presence of a curtain, allows the Figure to produce the violence of the sensation. This violence impacts on the nervous system.
- 
-</p>
-      <img class="lazyload" src="assets/img/40_render visible the invisible/06.jpg" alt="Image 1">
-      <br>
-       <b><p>Hysteria</p></b>
-      <p>The body without organs has a powerful nonorganic life like the gothic line.  This never ceases to change direction. It is broken, split, diverted, turned in on itself, coiled up or extended. The body without organs, like an egg, has axes and vectors, gradients, zones, cinematic movements and dynamic tendencies. 
-<br>A wave with a variable amplitude traces zones or levels while flowing through the body without organs. When the wave encounters a chaotic external force a sensation and a temporary organ are produced. These can change, thus they allow allotropic variations to be made. 
-<br>A lines and colors system and temporary organs introduce time inside painting through chronochromatism. They are already there and always delayed, thus they are presence. Through presence, chronocromatism impacts directly on the Nervous System.
-<br>This constitutes the hysterical reality of painting.
-</p>
-      <img class="lazyload" src="assets/img/40_render visible the invisible/07.jpg" alt="Image 1">
-      <br>
-       <b><p>Painting Forces</p></b>
-      <p>Pressure, dilation, contraction, flattening, elongation, desire to sleep, to vomit, to turn over, to remain seated, time, inertia, weight, attraction, gravitation and germination are some invisible forces. Dissipation, isolation, deformation and are Bacon´s invisible forces. 
-<br>Invisible forces strike the Figure in the brushed, wiped, swiped or covered over areas. The Figure wrestles with these forces in an apparent movement. Deformation is expressed through a scream, the wrapping around the contour or the allotropic variations. The Figure´s ultimate function is to capture forces and rendering them visible.
-<br>Invisible and Visible forces are then coupled in the painting.
-</p>
-      <img class="lazyload" src="assets/img/40_render visible the invisible/08.jpg" alt="Image 1">
-      <br>
-       <b><p>Couples and Tryptichs</p></b>
-      <p>Matters of fact are nonillustrative and nonnarrative relations between Figures. 
-<br>Coupling is a type of matter of fact.
-<br>Vibration is sensation. Resonance of two sensations, of a Figure and a Figure, or a body and a body or a Figure and its attendant is coupling.
-<br>Tryptich is another type of matter of fact.
-<br>In a tryptich, ryhtm amplifies and turns into a Figure that exceeds itself. It falls and redistributes into a passive rhythm, an attendant rhythm and an active rhythm. 
-<br>These can be the resonance of the coupling of two figures, two bodies or a Figure and an animal or the capturing of time in a tryptich, which encountres active, passive, and attendant Figures. 
-<br>Matters of fact are nonillustrative and nonfigurative. 
-
-</p>
-      <img class="lazyload" src="assets/img/40_render visible the invisible/09.jpg" alt="Image 1">
       <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
@@ -689,6 +586,16 @@ el momento exacto en el que se derrumba el complejo de viviendas Pruitt Igoe, mu
       <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/16.jpg" alt="Image 16">
       <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/17.jpg" alt="Image 17">
       <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/18.jpg" alt="Image 18">
+      <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/19.jpg" alt="Image 18">
+      <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/20.jpg" alt="Image 18">
+      <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/21.jpg" alt="Image 1">
+      <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/22.JPG" alt="Image 2">
+      <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/23.jpg" alt="Image 3">
+      <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/24.JPG" alt="Image 4">
+      <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/25.jpg" alt="Image 5">
+      <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/26.JPG" alt="Image 6">
+      <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/27.jpg" alt="Image 7">
+      <br>
       <p class="text">Edición y textos: Manuel Mensa, Lucas Torres Agüero <br>
 Trabajos de: Macarena Sánchez y Camila Sueyro, Martina Cingolani Rey y Manuel Maquirrain, Santiago Cornejo y Manuela Toto, Sol Sánchez Cimarelli y Sol Zamalloa, Camila Ambroggi y Felipe Ginevra, María Eugenia Cosentino y Agustina Mesa, Clara Sosa D’Este y Catalina Stok, María Eugenia Massa y Agustina Monopoli, Delfina Herrera y Magdalena Jenik. <br>
 Trabajos del curso (i)Proyecto I(/i) dictado en Escuela de Arquitectura y Estudios Urbanos de la Universidad Torcuato Di Tella (2016)
