--- a/public/main.html
+++ b/public/main.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  
+<title>Manuel Mensa</title>
+<link rel="icon" type="image/x-icon" href="assets/img/00_logo/logo-MW.png">
+  
 <link href="/assets/css/global.css" rel="stylesheet">
 
 <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
