--- a/public/main.html
+++ b/public/main.html
@@ -3,7 +3,7 @@
 <head>
   
 <title>Manuel Mensa</title>
-<link rel="icon" type="image/x-icon" href="assets/img/00_logo/logo-MW.png">
+<link rel="icon" type="image/x-icon" src="assets/img/00_logo/logo-MW.png">
   
 <link href="/assets/css/global.css" rel="stylesheet">
 
