--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <meta name="theme-color" content="#ffffff">
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 
-    <title>Login page</title>
-    
+	<title>Login - Manuel Mensa</title>
+	<link rel="icon" type="image/x-icon" href="assets/img/00_logo/logo-MW.png">
     <style>
         body {
           background-color: #ffffff;
