--- a/public/main.html
+++ b/public/main.html
@@ -272,9 +272,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <br>
       <br>
       <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/06.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/07.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/08.jpg" alt="Image 1">
+       <video autoplay muted="muted" loop poster="assets/img/34_avenida de mayo/03.png" src="assets/img/09_casa gully_planos de arquitectura/05.mp4" alt="Video 1"></video> 
       <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
