--- a/public/main.html
+++ b/public/main.html
@@ -299,13 +299,14 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <p>Newsletter Errático</p><br>
       <br>
       <a href="https://creciendoenpublico.substack.com/" target=”_blank”>https://creciendoenpublico.substack.com/</a><br>
-      <img class="lazyload" src="assets/img/21_newsletter/07.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/21_newsletter/07.png" alt="Image 1">
       <br>
       <br>
       <p><b>Introducción</b></p>
         <p>A veces tengo conversaciones tan interesantes que son como una fiesta. Después las recreo internamente, regocijándome una y otra vez, pensando en caminos alternativos, posibles desenlaces, exageraciones, enojos o alegrías inventadas. Algún tiempo después, casi como un golpe, me doy cuenta de que algo singular, ya sea un fragmento de un libro, un suéter de tres mangas, la forma en que tal canción crece hacia el éxtasis, o la mirada penetrante en un fotograma de una película, es vital para que la sensibilidad y los problemas de la conversación continúen desplegándose. Todas estas cosas singulares y las razones de su sugerencia estarán en “Creciendo en Público”, un newsletter de frecuencia errática compuesto de recomendaciones privadas hechas públicas, como cartas flotando en el océano. <br>
 </p>
          <br>
+      <br>
        <img class="lazyload" src="assets/img/21_newsletter/04.jpg" alt="Image 1">
       <br>
       <br>
@@ -338,7 +339,8 @@ Decimonovena Serie <br>
 Del Humor <br>
 Lógica del Sentido <br>
 Gilles Deleuze <br> </i></p>
-      
+      <br>
+      <br>
        <img class="lazyload" src="assets/img/21_newsletter/05.jpg" alt="Image 1">
       <br>
       <br>
